src/security-group.tf
resource "aws_security_group" "acme_instances" {
    name        = "acme_instances"
    description = "Allow load balancer traffic and outbound"

    ingress {
        from_port       = 22
        to_port         = 22
        protocol        = "tcp"
        cidr_blocks     = ["0.0.0.0/0"]
    }

    ingress {
        from_port       = 5000
        to_port         = 5000
        protocol        = "tcp"
        security_groups = ["${aws_elb.acme.source_security_group_id}"]
    }

    egress {
        from_port       = 0
        to_port         = 0
        protocol        = "-1"
        cidr_blocks     = ["0.0.0.0/0"]
    }
}
